testsuite/tests/typecheck/should_fail/T7696.stderr

T7696.hs:9:6: error: [GHC-83865]
    • Couldn't match type ‘m0 a0’ with ‘()’
      Expected: ((), w ())
        Actual: (m0 a0, t0 m0)
    • In the expression: f1
      In an equation for ‘f2’: f2 = f1
